force-app/main/default/objects/auara_UmbralesActividad__c/auara_UmbralesActividad__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Utilizados por un Flow para determinar cuando se deben de crear tareas automáticas en función de la categoría del cliente</description>
    <label>Umbrales Actividad</label>
</CustomObject>