force-app/main/default/objects/auara_UmbralesActividad__c/fields/auara_CORTO__c.field-meta.xml
<CustomField>
    <fullName>auara_CORTO__c</fullName>
    <defaultValue>30</defaultValue>
    <label>CORTO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>