force-app/main/default/objects/auara_UmbralesActividad__c/fields/auara_LARGO__c.field-meta.xml
<CustomField>
    <fullName>auara_LARGO__c</fullName>
    <defaultValue>90</defaultValue>
    <label>LARGO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>