force-app/main/default/objects/auara_UmbralesActividad__c/fields/auara_MEDIO__c.field-meta.xml
<CustomField>
    <fullName>auara_MEDIO__c</fullName>
    <defaultValue>60</defaultValue>
    <label>MEDIO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>